--- a/Figure_2_TIMIT/requirements.txt
+++ b/Figure_2_TIMIT/requirements.txt
@@ -69,7 +69,7 @@ pyparsing=2.4.6=py_0
 pyqt=5.9.2=py36h05f1152_2
 python=3.6.10=h0371630_0
 python-dateutil=2.8.1=py_0
-python-speech-features=0.6=pypi_0
+# python-speech-features=0.6=pypi_0
 qt=5.9.7=h5867ecd_1
 readline=7.0=h7b6447c_5
 scipy=1.4.1=py36h0b6359f_0
